06_rect/grade.txt
Grading at Thu Jul  9 16:56:00 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:39:82: error: expected ‘)’ before ‘{’ token
   if ((max(r1.x, r2.x) > min(r1fx, r2fx)) || (max(r1.y, r2.y) > min(r1fy, r2fy)) {
                                                                                  ^
rectangle.c:57:1: error: expected expression before ‘}’ token
 }
 ^
rectangle.c:35:13: error: unused variable ‘rInt’ [-Werror=unused-variable]
   rectangle rInt;
             ^
rectangle.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
